test_results_defects/infer_test/underrun_st/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:21: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  19. 	int buf[5] = {1, 2, 3, 4, 5};
  20. 	int ret;
  21. 	ret = buf[-1];/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
             ^
  22. }
  23. 

#1
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:21: error: Dead Store
  The value written to &ret (type int) is never used.
  19. 	int buf[5] = {1, 2, 3, 4, 5};
  20. 	int ret;
  21. 	ret = buf[-1];/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  22. }
  23. 

#2
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:31: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  29. {
  30. 	int buf[5];
  31. 	buf[-1] = 1;/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  32. }
  33. 

#3
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:42: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  40. 	int buf[5];
  41. 	int index = -1;
  42. 	buf[index] = 1;/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  43. }
  44. 

#4
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:55: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  53. 	int ret;
  54. 	p = buf;
  55. 	ret = *(p - 1);/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
             ^
  56. }
  57. 

#5
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:55: error: Dead Store
  The value written to &ret (type int) is never used.
  53. 	int ret;
  54. 	p = buf;
  55. 	ret = *(p - 1);/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  56. }
  57. 

#6
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:67: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  65. 	int *p;
  66. 	p = buf;
  67. 	*(p - 1) = 1;/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  68. }
  69. 

#7
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:80: error: Buffer Overrun L1
  Offset: -1 Size: 5.
  78. 	int index = 1;
  79. 	p = buf;
  80. 	*(p - index) = 1;/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
       ^
  81. }
  82. 

#8
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/underrun_st.c:93: error: Buffer Overrun L3
  Offset: [-1, 4] Size: 5.
  91. 	for (i = 4; i >= -1; i --)
  92. 	{
  93. 		buf[i] = 1;/*Tool should detect this line as error*/ /*ERROR:Data Underrun*/
        ^
  94. 	}
  95. }

Found 9 issues
            Issue Type(ISSUED_TYPE_ID): #
  Buffer Overrun L1(BUFFER_OVERRUN_L1): 6
                Dead Store(DEAD_STORE): 2
  Buffer Overrun L3(BUFFER_OVERRUN_L3): 1
